# GPT-2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  trainer.Dockerfile
.dvc/: config
conf/: config.yaml
conf/data/: default.yaml
conf/model/: gpt2-l.yaml  gpt2-m.yaml  gpt2-xl.yaml  gpt2.yaml
conf/tokens/: gpt2.yaml
conf/train/: default.yaml
conf/training/: default.yaml
data/: .cache.dvc
data/processed/: .gitignore  fineweb_edu.dvc
docs/: mkdocs.yml
docs/docs/: index.md
entrypoints/: trainer.sh
gpt/: data.py  fineweb.py  generate.py  hellaswag.py  learning_rate.py  model.py  train.py  utils.py
gpt/hellaswag/: dataset.py  evaluate.py
scripts/: pull_data.sh
