[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gpt"
version = "0.0.1"
description = "Production ready GPT-2"
authors = [
  { name = "MykytaHordia" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "datasets>=3.5.0",
    "lightning>=2.5.1",
    "loguru>=0.7.3",
    "numpy>=2.2.4",
    "pip",
    "python-dotenv",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.50.3",
    "typer>=0.15.2",
    "pytest"
]
requires-python = "~=3.12.0"

[project.optional-dependencies]
dev = [
    "awscli",
    "dvc>=3.59.1",
    "dvc-s3>=3.2.0",
    "matplotlib>=3.10.1",
    "mkdocs",
    "pytest",
    "ruff",
    "seaborn>=0.13.2",
]

[tool.ruff]
line-length = 99
src = ["gpt"]
include = ["pyproject.toml", "gpt/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["gpt"]
force-sort-within-sections = true

